fix(community): avoid NPE when feed posts have no linked character
Map.of() rejects null keys, so looking up linkedCharacterId on an empty map crashed the feed after the linked-character feature shipped.

Co-authored-by: Cursor <cursoragent@cursor.com>